objects/ReceivableInformation__c.object
<CustomObject>
    <description>削除対象Object？</description>
    <fields>
        <fullName>MaeukekinJikoku__c</fullName>
        <description>債権管理の項目</description>
        <label>前受金（自国通貨）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maeukekin__c</fullName>
        <description>債権管理の項目</description>
        <label>前受金（取引通貨）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NyukinHikiateJikoku__c</fullName>
        <description>債権管理の項目</description>
        <label>入金引当（自国通貨）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NyukinHikiate__c</fullName>
        <description>債権管理の項目</description>
        <label>入金引当（取引通貨）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReceivableAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>債権情報</relationshipLabel>
        <relationshipName>ReceivableInformaitons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売オーダ</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipLabel>債権情報</relationshipLabel>
        <relationshipName>ReceivableInformaitons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SeikyuKingaku__c</fullName>
        <description>債権管理の項目</description>
        <label>請求金額（取引通貨）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uriage__c</fullName>
        <description>債権管理の項目</description>
        <label>売上（取引通貨）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UrikakeJikoku__c</fullName>
        <description>債権管理の項目</description>
        <label>売掛残高（自国通貨）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Urikake__c</fullName>
        <description>債権管理の項目</description>
        <label>売掛残高（取引通貨）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ZeikomiJyuchugaku__c</fullName>
        <description>債権管理の項目</description>
        <label>税込受注額（取引通貨）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zeikomiuriage__c</fullName>
        <description>債権管理の項目</description>
        <label>税込売上（自国通貨）</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>債権情報</label>
    <nameField>
        <label>債権名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>